kustomize/overlays/training01/s3proxy.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: s3proxy
  namespace: everest
spec:
  template:
    spec:
      volumes:
      - name: s3local
        persistentVolumeClaim:
          claimName: s3local
